# ffmpeg-face-detect

./: .gitignore  README.md  keywords.md  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  face_detector.cpp  face_detector.h  frame_converter.cpp  frame_converter.h  native_bridge.cpp  rtsp_decoder.cpp  rtsp_decoder.h  video_pipeline.cpp  video_pipeline.h
app/src/main/java/com/trungnt/ffmpegface/: MainActivity.kt  NativeBridge.kt  VideoSurfaceView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
